--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
                                                 <li class="mouse-pos-list-image-inner development interaction visible">
                             <div class="overlay overlay-image lazy" style="background-color: #F1F1F1; background-position: center center; background-repeat: no-repeat; background-size: cover;" data-bg="./media/t1.jpg"></div>                        </li>
                                                 <li class="mouse-pos-list-image-inner design development interaction visible">
-                            <div class="overlay overlay-image lazy" style="background-color: #E0D9D1; background-position: center center; background-repeat: no-repeat; background-size: cover;" data-bg="./media/t2.jpg"></div>                        </li>
+                            <div class="overlay overlay-image lazy" style="background-color: #E0D9D1; background-position: center center; background-repeat: no-repeat; background-size: cover;" data-bg="./Rathish-123/Portfolio-2/media/t2.jpg"></div>                        </li>
                                                 <li class="mouse-pos-list-image-inner design development interaction visible">
-                            <div class="overlay overlay-image lazy" style="background-color: #48494A; background-position: center center; background-repeat: no-repeat; background-size: cover;" data-bg="./media/t3.jpg"></div>                        </li>
+                            <div class="overlay overlay-image lazy" style="background-color: #48494A; background-position: center center; background-repeat: no-repeat; background-size: cover;" data-bg="Rathish-123/Portfolio-2/media/t3.jpg"></div>                        </li>
                                                 <li class="mouse-pos-list-image-inner design development interaction visible">
-                            <div class="overlay overlay-image lazy" style="background-color: #101010; background-position: center center; background-repeat: no-repeat; background-size: cover;" data-bg="./media/t4.jpg"></div>                        </li>
+                            <div class="overlay overlay-image lazy" style="background-color: #101010; background-position: center center; background-repeat: no-repeat; background-size: cover;" data-bg="media/t4.jpg"></div>                        </li>
                                             </div>
                 </div>
             </div>
